rt/test/errors/006/test.volt
//T macro:expect-failure
module test;

@mangledname("llvm.floor.f64") fn floor();
